[Qt] Call Widget::setSelfVisible from hide/show

https://bugs.webkit.org/show_bug.cgi?id=31203

Call Widget::setSelfVisible from Widget::show and
Widget::hide and use isParentVisible to decide
if the widget should be shown. This way client
code can rely on isVisible.

Change PluginViewQt::show, PluginViewQt::hide to
call the base class as it is doing the right thing
now. Add an assert verify that platfomWidget and
platformPluginWidget are the same.

* manual-tests/qt/qtplugin.html: Modify manual test
* platform/qt/WidgetQt.cpp:
(WebCore::Widget::show):
(WebCore::Widget::hide):

[Qt] Do not show the QWidget when the WebCore::Widget is hidden

https://bugs.webkit.org/show_bug.cgi?id=31203

The clipping code was making a QWidget visible even if the
WebCore::Widget was hidden. Fix the bug by calling setVisible
only if the WebCore::Widget Widget::isSelfVisible.

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::QtPluginWidget::show): Override WebCore::Widget::show to call handleVisibility
(WebCore::QtPluginWidget::handleVisibility): New method to call setVisible when we are visible
(FrameLoaderClientQt::createPlugin): Hide the QWidget by default

Canonical link: https://commits.webkit.org/42838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51409 268f45cc-cd09-0410-ab3c-d52691b4dbfc